--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="moment.js"></script>
     <script src="javascript.js"></script>
     <title>Restaurant Page</title>
 </head>
