--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <!-- <script src="node_modules/moment/min/moment.min.js"></script> -->
-    <script src="dist/main.js"></script>
+    <script src="dist/main.js" defer></script>
     <title>Restaurant Page</title>
 </head>
 <body>
