fix webpack loading errors

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style_copy.css">
-    <script type="module" src="./main.js" defer></script>
-    <title>Restaurant Page</title>
-</head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restaurant</title>
+<script defer src="bundle.js"></script></head>
 <body>
     <div class="container header">
         <div class="tab" data-selected="true" id="home">Home</div>
@@ -13,28 +13,7 @@
         <div class="tab" data-selected="false" id="contact">Contact</div>
     </div>
     <div class="container main">
-        <div class="content main" id="content">
-            <div class="card title">
-                Samosa Hut
-            </div>
-            <div class="card" id="description">
-                Samosa Hut has the best Samosas!
-            </div>
-            <div class="card" id="hours">
-                <div class="heading">Hours</div>
-                <li>Sunday: 12am - 4pm</li>
-                <li>Monday: 10am - 8pm</li>
-                <li>Teusday: 10am - 8pm</li>
-                <li>Wednesday: 10am - 8pm</li>
-                <li>Thursday: 10am - 8pm</li>
-                <li>Friday: 10am - 10pm</li>
-                <li>Saturday: 10am - 10pm</li>
-            </div>
-            <div class="card" id="location">
-                <div class="heading">Location</div>
-                9000 Central Ave, Manhattan, New York
-            </div>
-        </div>
+        <div class="content main" id="content"></div>
     </div>
     <div class="container footer">
         <a href="https://www.flaticon.com/free-icons/woman" title="woman icons">Woman icons created by Freepik - Flaticon</a>
