--- a/src/template.html
+++ b/src/template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
-<script defer src="bundle.js"></script></head>
+    <title><%= htmlWebpackPlugin.options.title%></title>
+</head>
 <body>
     <div class="container header">
         <div class="tab" data-selected="true" id="home">Home</div>
